Actualizando los codigos 12/04/2021

--- a/semana_05/webpage.html
+++ b/semana_05/webpage.html
@@ -2,36 +2,40 @@
 Sesion modulo_03 semana_05 31/03/2021-->
 
 
-<!DOCTYPE html>
+
+<!--This is the base structure of every html document
+wich would be composed of a html, head and body tag-->
+<!DOCTYPE html><!--This tag defines that is a html document-->
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protocolos de comunicacion Web</title>
-    <link rel="icon" href="D:\Descargas\Imagenes\o23s9XY.jpg">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Protocolos de comunicacion Web</title>
+        <link rel="icon" href="D:\Descargas\Imagenes\o23s9XY.jpg">
+    </head>
 
-<body style="background-color:yellowgreen;">
-    <header>
-        <div style="background-color: teal; height: 100%; width: 20%; ">dsadasdas</div>
-    </header>
-
-    <h1>Protocolos de comunicacion Web</h1>
-    <h2>Escurridizo</h2>
-    <p style="height: 150px; width: 1000px; ">
-        El Escurridizo es un Animal grande neutral que se encuentra en la Grieta 
-        del Invocador.Hay dos Escurridizos en el mapa, cada uno se encuentra en 
-        cada mitad del río atravesando el centro del terreno.<br><br>
-        Es único entre todos los monstruos del juego por dos razones: no tomará 
-        represalias contra un atacante, en su lugar, intentará huir en dirección 
-        opuesta a ellos, y se mueve a lo largo de una trayectoria fija en el río 
-        en la parte del mapa en la que se genera. Esto hace que el Escurridizo 
-        sea el único monstruo no hostil y de movimiento autónomo en el mapa.</p>
-
-    <img width="25%" src="D:\Descargas\Imagenes\o23s9XY.jpg" alt="Si no te aparece es una imagen"><br>
-
-    <iframe width="420" height="315" src="https://www.youtube.com/watch?v=X34ZmkeZDos&ab_channel=JomaTech"> dasda</iframe>
-</body>
+    <body>
+        <div>
+            <h1>Protocolos de comunicacion Web</h1>
+            <a href="https://github.com/BuffedCode/MagIA.git">Link para mi repositorio de GitHub</a>
+            <h2>Escurridizo</h2>
+            <p style="height: 150px; width: 500px; ">
+                El Escurridizo es un Animal grande neutral que se encuentra en la Grieta 
+                del Invocador.Hay dos Escurridizos en el mapa, cada uno se encuentra en 
+                cada mitad del río atravesando el centro del terreno.<br><br>
+                Es único entre todos los monstruos del juego por dos razones: no tomará 
+                represalias contra un atacante, en su lugar, intentará huir en dirección 
+                opuesta a ellos, y se mueve a lo largo de una trayectoria fija en el río 
+                en la parte del mapa en la que se genera. Esto hace que el Escurridizo 
+                sea el único monstruo no hostil y de movimiento autónomo en el mapa.
+            </p>
+        </div>
+        <div align = center>
+            <img width="25%" src="D:\Descargas\Imagenes\o23s9XY.jpg" alt="Si no te aparece es una imagen"><br>
+            <h2>Aqui les muestro un video explicando el mejor editor de tecto :/ :v</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/X34ZmkeZDos" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
+        </div>
+    </body>
 </html>
